feat: Upgrade to Spring Boot 3.5.14 (#82)
* feat: Update itf-core to Java 21 and Spring Boot 3.3.11. Change javax to jakarta

* feat: Replace Object type of mapped properties to BigInteger;

* fix: Bump Undertow dependency version to 2.3.21.Final. 

* feat: Remove clover-maven-plugin. Bump maven-surefire-plugin to 3.5.5, javers to 7.9.0, querydsl to 5.1.0. Remove keycloak dependency.

* feat: Change Spring Boot version to 3.5.11. Extra related changes: dependency management is improved (in the most cases trusted to Spring). Bump dependencies: bouncycastle to 1.80, guava to 32.0.1-jre, mockito-core and mockito-junit-jupiter to 5.23.0, springdoc-openapi-starter-webmvc-ui to 2.8.16, spring-security-web to 6.5.9, maven-compiler-plugin to 3.15.0. @Serial annotation is added to serialVersionUID fields. Some modern syntax replacements are made. Clover plugin is removed.

* refactor: Deprecated org.hibernate.jpa.QueryHints API usages are replaced to org.hibernate.jpa.HibernateHints.

* refactor: Deprecated clazz.newInstance() usages are fixed.

* perf: ExtendableImpl: Gson and JsonParser usages are optimized.

* fix: Some code check warns are fixed.

* feat: Change Apache Velocity Engine to 2.4.1, Apache Velocity Tools to 3.1.

* fix: AbstractTransportImpl#sendReceiveSync method: Missed Exception is thrown.

* fix: Configuration of Hibernate L2 Cache via Hazelcast is fixed according to modern API changes. Hazelcast dependency management is fixed. Bump Spring Boot version to 3.5.12. 

* build: Bump openapi-generator-maven-plugin to 7.9.0, its configuration is optimized.

* fix: HQL queries are fixed: database columns are replaced to model properties in non-native queries.

* feat(tests): Unit tests for Object Managers level classes are implemented. Some errors in prod classes are fixed.

* feat(tests): Unit tests for Velocity Directives are implemented. AddDate and DecodeSaml directives are slightly fixed.

* feat: Change Spring-Boot to 3.5.14; spring-cloud to 2025.0.2, ATP 