@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -79,7 +79,7 @@ public class ConditionsHelper {
                     break;
                 }
                 default: {
-                    throw new IllegalArgumentException(String.format("Illegal boolean operation: %s", etc));
+                    throw new IllegalArgumentException("Illegal boolean operation: %s".formatted(etc));
                 }
             }
         }
