@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -35,7 +35,7 @@ public class FastStubsTreeView {
      * Constructor.
      */
     public FastStubsTreeView(String endpoint, StubEndpointConfig.TransportTypes transportType) {
-        this.name = String.format("%s %s", transportType.toString(), endpoint);
+        this.name = "%s %s".formatted(transportType.toString(), endpoint);
         this.endpoint = endpoint;
         this.transportType = transportType;
     }
